<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_picture_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="@dimen/login_picture_margin_bottom"
        android:src="@drawable/login_icon_android"/>
    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableStart="@drawable/account"
        android:drawablePadding="@dimen/edit_padding"
        android:background="@drawable/login_edit_bg"
        android:layout_marginLeft="@dimen/login_editview_margin"
        android:layout_marginRight="@dimen/login_editview_margin"
        android:textCursorDrawable="@drawable/edit_cursor_color_white"
        android:hint="@string/register_account"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/edit_padding"
        android:background="@drawable/login_edit_bg"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_marginLeft="@dimen/login_editview_margin"
        android:layout_marginRight="@dimen/login_editview_margin"
        android:textCursorDrawable="@drawable/edit_cursor_color_white"
        android:hint="@string/register_password"
        android:textColor="@color/white"/>

    <com.zust.playandroid.custom.ProgressButton.ProgressButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/login_editview_margin"
        android:layout_marginRight="@dimen/login_editview_margin"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:pb_radius="@dimen/login_button_height"
        app:pb_color_progress_background="@color/white"
        app:pb_color_progress_indicator="@color/colorAccent"
        app:pb_text_idle="@string/login"
        app:pb_color_circle="@color/transport"
        app:pb_icon_complete="@drawable/login_background_success"
        app:pb_icon_error="@drawable/login_background_error"/>
    <com.zust.playandroid.custom.ProgressButton.ProgressButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/login_editview_margin"
        android:layout_marginRight="@dimen/login_editview_margin"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:pb_radius="@dimen/login_button_height"
        app:pb_text_idle="@string/register"/>
</LinearLayout>