<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_gray1">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/dp_12"
            android:paddingRight="@dimen/dp_12"
            android:paddingTop="10dp"
            android:src="@drawable/back" />

        <EditText
            android:id="@+id/search_content"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/search_edit_background_selector"
            android:textCursorDrawable="@drawable/edit_cursor_color_blue"/>

        <Button
            android:id="@+id/search"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="5dp"
            android:background="@drawable/search_background_blue"
            android:text="@string/search"
            android:textColor="@color/code_white_70"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/search_history"
                android:layout_margin="@dimen/dp_12"
                android:gravity="center"
                android:textSize="14dp"/>
            <ImageView
                android:id="@+id/history_delete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/search_history_delete"
                android:layout_alignParentRight="true"
                android:layout_toStartOf="@id/flow_search_history"/>
            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/flow_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/history"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_12"/>
            <TextView
                android:id="@+id/hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_hot_words"
                android:layout_below="@id/flow_search_history"
                android:layout_margin="@dimen/dp_12"
                android:textSize="14dp"/>
            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/flow_hot_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hot"
                android:layout_margin="@dimen/dp_20"/>
            <TextView
                android:id="@+id/web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_hot_web"
                android:layout_below="@id/flow_hot_words"
                android:layout_margin="@dimen/dp_12"
                android:textSize="14dp"/>
            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/flow_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/web"
                android:layout_margin="@dimen/dp_20"/>
        </RelativeLayout>
    </ScrollView>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:visibility="gone">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</RelativeLayout>